src/main/java/com/example/commutils/error/customize/FileDownFailException.java
package com.example.commutils.error.customize;

/**
 * 自定義文件下載錯誤<p>
 *<p>
 *<strong>className類初使化方法</strong>
 * <ul>
 * <li>方法1.
 * <li>方法2.
 * </ul>
 * @author eric.wang
 * @version 1.0, 2018年8月27日 
 * @since JDK1.8
 */

public class FileDownFailException extends BasicException{

	public FileDownFailException(String[] detail, String[] data, String log) {
		super(detail, data, log);
		// TODO Auto-generated constructor stub
	}

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

}
